--- a/master.css
+++ b/master.css
@@ -1,3 +1,11 @@
+/*nav bar fixed */
+.nav-bar-fixed{
+  overflow: hidden;
+  position: fixed; 
+  top: 0;
+  width: 100%;
+  
+}
 input[type=number]::-webkit-outer-spin-button,
 input[type=number]::-webkit-inner-spin-button {
     -webkit-appearance: none;
