--- a/master.css
+++ b/master.css
@@ -1,11 +1,3 @@
-/*nav bar fixed */
-.nav-bar-fixed{
-  overflow: hidden;
-  position: fixed; 
-  top: 0;
-  width: 100%;
-  
-}
 input[type=number]::-webkit-outer-spin-button,
 input[type=number]::-webkit-inner-spin-button {
     -webkit-appearance: none;
@@ -26,9 +18,9 @@ input:not([type]):focus:not([readonly]), input[type="text"]:not(.browser-default
 input:not([type]):focus:not([readonly]) + label, input[type="text"]:not(.browser-default):focus:not([readonly]) + label, input[type="number"]:not(.browser-default):focus:not([readonly]) + label {
   color:#0277bd; 
   }
-.row .col {
-  float: left;
-  }
+
+
+
 .heading {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 2.08em;
@@ -37,18 +29,30 @@ input:not([type]):focus:not([readonly]) + label, input[type="text"]:not(.browser
   margin-bottom: 15px;
 
 }
-.add-product,.time-line{
+
+.btn{
+  margin-right: 20px;
+}
+
+.time-line{
+  padding: 15px 10px;
+  margin-top: 10px;
+}
+.add-product,.create-product-form{
     padding: 15px 10px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 @media screen and (max-width: 600px) {
-  .add-product {
-    width: 95%;
+  .add-product,.create-product {
+    width: 97%;
     /* margin:0px 5px; */
   }
   .time-line{
     width: 95%;
+  }
+  .product-create{
+    width: 100%;
   }
   .input-field{
     margin-top: 8px;
