--- a/master.css
+++ b/master.css
@@ -1,70 +1,91 @@
-input[type=number]::-webkit-outer-spin-button,
-input[type=number]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
-input[type=number] {
-    -moz-appearance:textfield;
+input[type='number'] {
+  -moz-appearance: textfield;
 }
 .input-field .prefix.active {
   color: #0277bd;
-  }
+}
 
-input:not([type]):focus:not([readonly]), input[type="text"]:not(.browser-default):focus:not([readonly]), input[type="number"]:not(.browser-default):focus:not([readonly]) {
-  border-bottom: 1px solid #0277bd; 
+input:not([type]):focus:not([readonly]),
+input[type='text']:not(.browser-default):focus:not([readonly]),
+input[type='number']:not(.browser-default):focus:not([readonly]) {
+  border-bottom: 1px solid #0277bd;
   box-shadow: 0 1px 0 0 #0277bd;
 }
-input:not([type]):focus:not([readonly]) + label, input[type="text"]:not(.browser-default):focus:not([readonly]) + label, input[type="number"]:not(.browser-default):focus:not([readonly]) + label {
-  color:#0277bd; 
-  }
-
-
+input:not([type]):focus:not([readonly]) + label,
+input[type='text']:not(.browser-default):focus:not([readonly]) + label,
+input[type='number']:not(.browser-default):focus:not([readonly]) + label {
+  color: #0277bd;
+}
 
 .heading {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 2.08em;
   font-weight: 600;
   padding-left: 1rem;
   margin-bottom: 15px;
-
 }
 
-.btn{
+.btn {
   margin-right: 20px;
 }
 
-.time-line{
+.time-line {
   padding: 15px 10px;
   margin-top: 10px;
 }
-.add-product,.create-product-form{
-    padding: 15px 10px;
-    margin-top: 10px;
+.add-product,
+.create-product-form {
+  padding: 15px 10px;
+  margin-top: 10px;
 }
 
 @media screen and (max-width: 600px) {
-  .add-product,.create-product {
+  .add-product,
+  .create-product {
     width: 97%;
     /* margin:0px 5px; */
   }
-  .time-line{
+  .time-line {
     width: 95%;
   }
-  .product-create{
+  .product-create {
     width: 100%;
   }
-  .input-field{
+  .input-field {
     margin-top: 8px;
     margin-bottom: 8px;
   }
 }
-.delete-icon{
- margin-right:0px !important;
+.delete-icon {
+  margin-right: 0px !important;
 }
-.collapsible-body{
+.collapsible-body {
   padding: 1rem;
 }
 .collapsible-body p {
   margin: 10px 0px;
+}
+
+
+/* new */
+.create-product-icon-box {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 1.5em;
+}
+.heading{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 2.08em;
+  font-weight: 600;
+  padding-left: 1rem;
+  
+  margin-bottom:0px;
 }
