--- a/master.css
+++ b/master.css
@@ -27,7 +27,6 @@ input[type='number']:not(.browser-default):focus:not([readonly]) + label {
   margin-right: 20px;
 }
 
-
 .add-product,
 .create-product-form {
   padding: 15px 10px;
@@ -61,12 +60,24 @@ input[type='number']:not(.browser-default):focus:not([readonly]) + label {
   justify-content: flex-end;
   margin-top: 1.5em;
 }
-.heading{
+.heading {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
     'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 2.08em;
   font-weight: 600;
   padding-left: 1rem;
-  
-  margin-bottom:0px;
+
+  margin-bottom: 0px;
+}
+
+#product-nameautocomplete-list > div {
+  padding: 10px 10px 10px 10px;
+  background-color: #ffffff;
+  margin-left: 30px !important;
+  border-radius: 2px;
+  /* border: 1px solid #0277bd; */
+  margin: 2px;
+}
+#product-nameautocomplete-list > div:hover{
+  background-color: #e7e7e7;
 }
