collopasable for all product

--- a/master.css
+++ b/master.css
@@ -28,7 +28,8 @@ input[type='number']:not(.browser-default):focus:not([readonly]) + label {
 }
 
 .add-product,
-.create-product-form ,.total-products{
+.create-product-form,
+.total-products {
   padding: 15px 10px;
   margin-top: 10px;
 }
@@ -78,53 +79,62 @@ input[type='number']:not(.browser-default):focus:not([readonly]) + label {
   /* border: 1px solid #0277bd; */
   margin: 2px;
 }
-#product-name-timelineautocomplete-list > div:hover{
+#product-name-timelineautocomplete-list > div:hover {
   background-color: #e7e7e7;
 }
 
-.collapsible{
+.collapsible {
   -webkit-box-shadow: 0 2px 2px 0 rgba(255, 255, 255, 0.14);
   box-shadow: 0 2px 2px 0 rgba(255, 255, 255, 0.14);
   margin-bottom: 0px;
-  }
+}
 
-  .collapsible {
-    border-right: 1px solid #ddd;
-    border-left: 1px solid #ddd;
-    }
+.collapsible {
+  border-right: 1px solid #ddd;
+  border-left: 1px solid #ddd;
+}
 
-    .nav-wrapper{
-      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+.nav-wrapper {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
     'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    }
+}
 
-    body{
-      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+body {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
     'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    }
-    .time-line{
-      padding: 15px 10px;
-    }
- 
-    .p-name:first-letter {
-      text-transform: uppercase;
-  }
-  .p-name,.name-p{
-    margin:0px;
-  }
-  /* dash board */
+}
+.time-line {
+  padding: 15px 10px;
+}
 
-.all-products{
+.p-name:first-letter {
+  text-transform: uppercase;
+}
+.p-name,
+.name-p {
+  margin: 0px;
+}
+/* dash board */
+
+.all-products {
   margin-left: 40px;
   margin-bottom: 10px;
 }
-.name-p{
-  padding:10px;
-  border:  1px solid #ddd;
- 
+.name-p {
+  padding: 10px;
+  border: 1px solid #ddd;
 }
 #dashBoard > div:nth-child(2) {
   margin-bottom: 0px;
-  }
+}
 
-  
+.collapsible-body-2 {
+  display: none;
+  border: 1px solid #ddd;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 2rem;
+}
+b .cap:first-letter {
+  text-transform: uppercase;
+}
