--- a/master.css
+++ b/master.css
@@ -157,7 +157,7 @@ body {
   
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 2rem;
+  padding: 1rem;
 }
 .cap,.name-p {
   text-transform: capitalize;
@@ -168,5 +168,13 @@ body {
 }
 
 .edit.row{
+  margin-bottom: 10px;
+}
+.edit{
+  padding: 10px 15px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+.collapsible-body-2 .row{
   margin-bottom: 10px;
 }
