--- a/master.css
+++ b/master.css
@@ -36,7 +36,9 @@ input[type='number']:not(.browser-default):focus:not([readonly]) + label {
 
 @media screen and (max-width: 600px) {
   .add-product,
-  .create-product,.total-products ,.charts{
+  .create-product,
+  .total-products,
+  .charts {
     width: 97%;
     /* margin:0px 5px; */
   }
@@ -123,7 +125,7 @@ body {
 
 .row {
   margin-bottom: 20px;
-  }
+}
 .name-p {
   padding: 10px;
   /* border: 1px solid #ddd; */
@@ -141,7 +143,7 @@ body {
 }
 .collapsible-header-2 > .row {
   margin-bottom: 0px;
-  padding:1rem;
+  padding: 1rem;
   border-bottom: 1px solid #ddd;
 }
 .collapsible-body-2 {
@@ -156,46 +158,61 @@ body {
 .collapsible-body-2 {
   display: none;
   border-bottom: 1px solid #ddd;
-  
+
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   padding: 1rem;
 }
-.cap,.name-p {
+.cap,
+.name-p {
   text-transform: capitalize;
 }
-.info{
+.info {
   margin: 0px !important;
   padding: 0px 6px !important;
 }
 
-.edit.row{
+.edit.row {
   margin-bottom: 10px;
 }
-.edit{
+.edit {
   padding: 10px 15px;
   border: 1px solid #ddd;
   border-radius: 5px;
 }
-.collapsible-body-2 .row{
+.collapsible-body-2 .row {
   margin-bottom: 10px;
 }
-.charts{
+.charts {
   margin-top: 20px;
   margin-bottom: 20px;
   padding: 10px;
 }
 
-  .swal-button--cancel:not([disabled]):hover ,.swal-button--cancel:not([disabled]):active,.swal-button--cancel:not([disabled]):focus {
-    background-color: #0277bd;
+.swal-button--cancel:not([disabled]):hover,
+.swal-button--cancel:not([disabled]):active,
+.swal-button--cancel:not([disabled]):focus {
+  background-color: #0277bd;
   color: white;
-    }
-    .swal-button--cancel,.swal-button--cancel:active {
-      background-color: #0277bd;
-      color: white;
-  }
+}
+.swal-button--cancel,
+.swal-button--cancel:active {
+  background-color: #0277bd;
+  color: white;
+}
 
-    .swal-button--danger:focus {
-      box-shadow: 0 0 0 1px #fff,0 0 0 3px rgba(116,136,150,.29);
-      background-color: #e64942;
-  }
+.swal-button--danger:focus {
+  box-shadow: 0 0 0 1px #fff, 0 0 0 3px rgba(116, 136, 150, 0.29);
+  background-color: #e64942;
+}
+
+.date {
+  padding: 8px;
+  text-align: center;
+  border-bottom: 2px solid #ddd;
+  border-radius: 15px;
+  font-weight: bolder;
+  font-size: 1rem;
+  line-height: 22px;
+  color: #757575;
+}
